# Last-Plugin

./: .gitignore  AI_SERVER_SUCCESS.md  AUDIO_INTERFACE_TESTING.md  CMakeLists.txt  CONTRIBUTING.md  FIXES_APPLIED.md  PROJECT_STATUS.md  README.md  SECURITY.md  SETUP_GUIDE.md  TESTING_GUIDE.md  THREADING_ARCHITECTURE.md  UI_FEATURES.md  WAVEFORM_TESTING_GUIDE.md  WORKING_VERSION_STATUS.md  build.sh  package-lock.json  package.json  test-plugin.js  verify-build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AmpSimulator.h  CabinetSimulator.h  Chorus.h  Compressor.h  DSPChain.cpp  DSPChain.h  Delay.h  Drive.cpp  Drive.h  Equalizer.h  NoiseGate.h  Reverb.cpp  Reverb.h
Source/Preset/: PresetGenerationManager.cpp  PresetGenerationManager.h  PresetManager.cpp  PresetManager.h  PresetSchema.cpp  PresetSchema.h
Source/UI/: AIPromptComponent.h  ArtisticLookAndFeel.cpp  ArtisticLookAndFeel.h  EffectChainVisualizer.h  LevelMeter.cpp  LevelMeter.h  LevelMeterComponent.cpp  LevelMeterComponent.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h
Source/Utils/: ParameterSmoother.cpp  ParameterSmoother.h  ThreadSafeQueue.h
preset-server/: env.example  example-presets.json  package-lock.json  package.json  server.js  test-preset.js
